# map-fusion

./: .gitignore  BATCH_OPTIMIZATION_IMPROVEMENT.md  CMakeLists.txt  README.md  SAVE_FEATURE_SUMMARY.md  map_fusion_component.cpp  map_fusion_component.hpp
data/2_rtk/: path_pg_rtk.txt
data/localization_0506/: loop_res.txt  pose_location.txt  pose_world_T_wheel.txt  rename_submaps.py
data/mapping_0506/: loop_res.txt  path_pg_rtk.txt  pose_world_T_wheel.txt
data/submap_200_visual/: path_pg_rtk.txt
map_fusion/: CMakeLists.txt  finished_submap.cpp  grid_map.cpp  grid_map.hpp  local_map.cpp  local_map.hpp  map_fusion.cpp  map_fusion.hpp  map_fusion_common.hpp
tools/: .gitignore  ORGANIZATION_SUMMARY.md  README.md  fuse_submaps.py  grid_corr_matcher.py  optimize_submap.py  particle_filter_matcher.py  requirements.txt  run_fuse_submap.py  run_optimization.py  test_batch_optimization.py  test_batch_save_improvement.py  test_save_functionality.py  xxx_match.py
tools/core/: fuse_submaps.py  likelihood_optimizer.py  optimize_submap.py  particle_filter_matcher.py
tools/debug/: debug_likelihood.py
tools/docs/: README_batch_optimization.md  README_likelihood_optimizer.md  README_save_functionality.md
tools/examples/: example_batch_save_usage.md  example_batch_usage.md  example_fuse_usage.md  example_save_usage.md
tools/tests/: test_batch_optimization.py  test_batch_save_improvement.py  test_likelihood_optimization.py  test_likelihood_optimizer.py  test_save_functionality.py
